fix pgn/fen download btn & text overflow

--- a/client/src/ui/GameRoom/sidePanel/moves/moves.scss
+++ b/client/src/ui/GameRoom/sidePanel/moves/moves.scss
@@ -8,6 +8,7 @@ $alt-color: #bf8b69;
   }
 
 .header{
+    overflow: hidden;
     justify-content: flex-end;
     background: #525357;
     height: 2rem/* 28px */;
